# commonplace-code

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
commonplace_db/: __init__.py  db.py  feast_schema.py  maintenance.py  slug.py
commonplace_server/: __init__.py  __main__.py  _retry.py  accept_middleware.py  capture.py  chunking.py  corrections.py  embedding.py  google_books.py  jobs.py  liturgical_calendar.py  mcp_token.py  openlibrary.py  pipeline.py  progress.py  search.py  server.py  subject_frequency.py  surface.py  tmdb.py
commonplace_worker/: __main__.py  binaries.py  bluesky_auth.py  checkpoints.py  claude_skill.py  errors.py  frontmatter.py  kindle_scraper.py  notion.py  therapy_watcher.py  transcription.py  vault_io.py  worker.py
docs/: README.md  execution-plan.md  liturgical-ingest-plan.md  phase-0-0.md  phone-ipad-shortcuts.md  plan.md  profile-regen.md
scripts/: audiobooks_scan.py  bcp_crawler.py  bluesky_backfill.py  book_enrichment_scan.py  capture_prose_regression.py  com.commonplace.audiobooks-scan.plist  com.commonplace.bluesky-backfill.plist  com.commonplace.book-enrichment-scan.plist  com.commonplace.dayone-backfill.plist  com.commonplace.kindle-backfill.plist  com.commonplace.library-backup.plist  com.commonplace.library-watch.plist  com.commonplace.log-rotate.plist  com.commonplace.mcp-server.plist  com.commonplace.notion-therapy-watch.plist  com.commonplace.profile-regen.plist  com.commonplace.video-scan.plist  com.commonplace.worker.plist  com.commonplace.zombie-watchdog.plist  dayone_backfill.py  feast_import.py  new-skill.sh  (+25 more)
(+208 files in other folders)
